# to-do_list

./: .env.example  .gitignore  README.md  pyproject.toml
app/: settings.py  urls.py
app/templates/: base.html
