[project]
name = "api-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django-environ>=0.11.2",
    "django>=5.1.4",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "django-debug-toolbar>=4.4.6",
    "django-jazzmin>=3.0.1",
]
